<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="24dp"
            android:background="@color/teal_700"
            android:letterSpacing="0.2"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@null"
            android:src="@drawable/img_give"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name" />

        <TextView
            android:id="@+id/total_amount"
            style="@style/LabelTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_total"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/hint_total_amount"
            android:minHeight="48dp"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/total_amount">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bill_input"
                style="@style/TextInputStyle"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/choose_tip"
            style="@style/LabelTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_tip"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_total" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/tip_15"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_tip">

            <RadioButton
                android:id="@+id/tip_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_15" />

            <RadioButton
                android:id="@+id/tip_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_20" />

            <RadioButton
                android:id="@+id/tip_25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_25" />
        </RadioGroup>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/round_up_tip"
            android:text="@string/round_up_tip"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/calculate_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_options">
        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_btn"
            app:cornerRadius="8dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_tip">
        </com.google.android.material.button.MaterialButton>

        <TextView
            android:id="@+id/result"
            style="@style/LabelTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/your_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_tip"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result" />

        <TextView
            android:id="@+id/calculated_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculated_tip"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/your_tip"
            app:layout_constraintTop_toBottomOf="@+id/result" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_tip" />

        <TextView
            android:id="@+id/calculated_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculated_total"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/total"
            app:layout_constraintTop_toTopOf="@+id/total" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>